# honeycomb-walk

./: CMakeLists.txt  README.md
include/: honeycomb_walk.h
src/: honeycomb_walk.cpp  main.cpp
tests/: test.cpp
